working but not designed

--- a/views/partials/burgers/burger-block.handlebars
+++ b/views/partials/burgers/burger-block.handlebars
@@ -1,7 +1,7 @@
 <li>
 	{{name}}
 
-	<button class="devour" data-id="{{id}}" data-newsleep="{{devour}}">
+	<button class="devour" data-id="{{id}}" data-newEaten="{{devour}}">
 		{{#if devoured}}Devour{{/if}}
 	</button>
 </li>
