--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,26 +1,22 @@
 <h1>Burgers!</h1>
 
-<h2>Burger Stuff and Things!</h2>
+<div class="row">
+  <div class="col-6">
+    <h2>Burgers to Eat</h2>
+    <ul>
+      {{#each burgers}} {{#unless devoured}} {{burger_name}} {{> burgers/burger-block devoured=true}}
+        {{/unless}}
+      {{/each}}
+    </ul>
+  </div>
+  <div class="col-6">
+    <h2>Burgers Devoured!</h2>
 
-<ul>
-  {{#each burgers}}
-    {{#unless devoured}}
-      {{burger_name}}
-      {{> burgers/burger-block devoured=true}}
-    {{/unless}}
-  {{/each}}
-</ul>
-
-<h2>Burgers Devoured!</h2>
-
-<ul>
-  {{#each burgers}}
-    {{#if devoured}}
-      {{> burgers/burger-block devoured=false}}
-    {{/if}}
-  {{/each}}
-</ul>
-
+    <ul>
+      {{#each burgers}} {{#if devoured}} {{burger_name}} {{> burgers/burger-block-delete devoured=false}} {{/if}} <br> {{/each}}
+    </ul>
+  </div>
+</div>
 <h2>Add a Burger</h2>
 <form class="create-form">
 
