working on deployment

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,4 +1,6 @@
-<h1>Burgers!</h1>
+<div class="row">
+  <h1 class="text-center col-11">Burgers!</h1>
+</div>
 
 <div class="row">
   <div class="col-6">
